<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.PhoneActivity">


    <RelativeLayout
        android:id="@+id/headerLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:layout_alignParentEnd="true">


        <TextView
            android:id="@+id/headerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_login"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14ssp"/>

        <ImageView
            android:id="@+id/closeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_round_close_24"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:background="@drawable/gradient_one">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>



    <RelativeLayout
        android:id="@+id/confirmLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_below="@+id/headerLayoutId"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/logoId"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40sp"/>

        <TextView
            android:id="@+id/header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:layout_below="@id/logoId"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/infoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp_message"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/header2"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_below="@+id/infoId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmEditTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_8sdp"
                android:textSize="14sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:hint="@string/enter_otp"
                android:inputType="phone" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/resendTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/resend_code"
            android:textSize="@dimen/_8ssp"
            android:padding="@dimen/_8sdp"
            android:layout_below="@+id/confirmInputLayout"/>


        <TextView
            android:id="@+id/countdownTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="12dp"
            android:text="@string/time"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_8ssp"
            android:layout_below="@id/confirmInputLayout"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/mainLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:visibility="visible"
        android:layout_below="@+id/headerLayoutId"
        android:layout_centerInParent="true">


        <ImageView
            android:id="@+id/logoId2"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:background="@drawable/ic_round_phone_android_24"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40sp"/>

        <TextView
            android:id="@+id/header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:layout_below="@id/logoId2"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/infoId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your phone number to get \n an OTP for account verification"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/header3"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_below="@+id/infoId2">

            <com.droid2developers.auction.utils.PrefixEditText
                android:id="@+id/phoneEditTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="+91 "
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="Phone number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>






</RelativeLayout>